[package]
name = "toml-editor"
version = "0.5.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.19.7"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.10", features = ["derive"] }
anyhow = "1.0.58"

[dev-dependencies]
pretty_assertions = "1.3.0"
