[package]
name = "toml-editor"
version = "0.5.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.22.7"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.58"

[dev-dependencies]
expect-test = "1.5.1"
